# livepass

./: .gitignore  AGENTS.md  README.md  go.mod  go.sum  go.work.sum
agents/: .env.example  README.md  pyproject.toml
agents/app/: __init__.py  config.py  graph.py  main.py  prompts.py  router.py  state.py
agents/app/agent_runtime/: callbacks.py  human_tools.py  interrupt_models.py  service.py
agents/app/agents/: __init__.py  activity.py  base.py  coordinator.py  handoff.py  knowledge.py  llm.py  order.py  refund.py  refund_hitl_flow.py  supervisor.py
agents/app/api/: app.py  dependencies.py  routes.py  schemas.py
agents/app/common/: errors.py  ids.py
agents/app/graph/: __init__.py  builder.py  nodes.py  routing.py  state.py
agents/app/knowledge/: __init__.py  service.py
agents/app/llm/: client.py  schemas.py
agents/app/mcp_client/: execution_context.py  interceptor.py  registry.py  tracing.py
agents/app/mcp_server/: server.py  toolsets.py
agents/app/messages/: models.py  repository.py  service.py
agents/app/observability/: __init__.py  audit.py  tracing.py
agents/app/orchestrator/: __init__.py  graph.py  parent_agent.py  policy_engine.py  service.py  skill_resolver.py  state.py
agents/docs/: ticketing_common_faq.md
agents/prompts/: coordinator.md  order_specialist.md  supervisor.md
agents/scripts/: generate_proto_stubs.sh
agents/tests/: fakes.py  test_activity_tools.py  test_agent_runtime_service.py  test_agents.py  test_api.py  test_chat_service.py  test_config.py  test_coordinator_agent.py  test_docs.py  test_e2e_contract.py  test_e2e_flows.py  test_go_provider_registry.py  test_graph.py  test_graph_flow.py  test_handoff_flow.py  test_hitl_bridge.py  test_hitl_policies.py  test_hitl_tool_wrapper.py  test_human_input_tool.py  test_knowledge_agent.py  test_mcp_interceptor.py  test_mcp_registry.py  test_mcp_server.py  test_no_llm_fallback.py  test_order_refund_flow.py  test_order_tools.py  test_parent_agent.py  test_policy_engine.py  test_prompts.py  test_provider_registry.py  test_refund_hitl_flow.py  test_refund_tools.py  test_router.py  test_rpc_clients.py  test_run_contract_api.py  test_run_executor.py  test_run_resume_cancel_api.py  test_run_stream_service.py  test_session_store.py  test_skill_registry.py  (+8 more)
(+1032 files in other folders)
