[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "damai-agents"
version = "0.1.0"
description = "Agents chat service for damai-go"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.34.0",
  "langgraph>=0.3.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.3.0",
  "redis>=5.2.0",
  "grpcio>=1.71.0",
  "grpcio-tools>=1.71.0",
  "pydantic-settings>=2.8.0",
  "pytest>=8.3.0",
  "httpx>=0.28.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
